apps/services/influxdb/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app.kubernetes.io/name: influxdb
    app.kubernetes.io/part-of: monitoring
