apps/services/influxdb/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: influxdb
  namespace: monitoring
  labels:
    app.kubernetes.io/name: influxdb
    app.kubernetes.io/part-of: monitoring
    app.kubernetes.io/component: database
spec:
  serviceName: influxdb-service
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: influxdb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: influxdb
        app.kubernetes.io/part-of: monitoring
        app.kubernetes.io/component: database
    spec:
      containers:
      - name: influxdb
        image: influxdb:1.8-alpine
        ports:
        - containerPort: 8086
          name: influxdb
        volumeMounts:
        - name: influxdb-data
          mountPath: /var/lib/influxdb
        - name: influxdb-config
          mountPath: /etc/influxdb
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 1
            memory: 2Gi
        readinessProbe:
          httpGet:
            path: /ping
            port: influxdb
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /ping
            port: influxdb
          initialDelaySeconds: 60
          periodSeconds: 20
          timeoutSeconds: 5
      volumes:
      - name: influxdb-data
        persistentVolumeClaim:
          claimName: influxdb-pvc
      - name: influxdb-config
        configMap:
          name: influxdb-config
